--- a/styles.css
+++ b/styles.css
@@ -1,49 +1,32 @@
 body {
-	font-family: Arial, sans-serif;
-	margin: 0;
-	padding: 0;
-}
-
-header {
-	background-color: #333;
-	color: #fff;
-	padding: 20px;
-}
-
-main {
-	margin: 20px;
-	display: grid;
-	grid-template-columns: 1fr 2fr;
-	grid-gap: 20px;
-}
-
-section {
-	margin-bottom: 20px;
-	padding: 20px;
-	background-color: #f2f2f2;
-}
-
-h2 {
-	margin-top: 0;
-	border-bottom: 1px solid #333;
-	padding-bottom: 5px;
-}
-
-ul {
-	list-style: none;
-	padding: 0;
-}
-
-li {
-	margin-bottom: 10px;
-}
-
-footer {
-	background-color: #333;
-	color: #fff;
-	padding: 10px;
-	text-align: center;
-}
-
+    background: white;
+  }
+  .chessboard {
+      width: 640px;
+      height: 640px;
+      margin: 20px;
+      border: 10px solid black;
+      border-radius: 4px;
+  }
+  .black {
+      float: left;
+      width: 80px;
+      height: 80px;
+      background-color: grey;
+        font-size:50px;
+      text-align:center;
+      display: table-cell;
+      vertical-align:middle;
+  }
+  .white {
+      float: left;
+      width: 80px;
+      height: 80px;
+      background-color: white;
+      font-size:50px;
+      text-align:center;
+      display: table-cell;
+      vertical-align:middle;
+  }
 
  
